# dcm_utils

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: block.rs  diff.rs  lib.rs  main.rs  value.rs
src/attr/: attr_arbitor.rs  mod.rs  string_attr.rs  value_attr.rs
src/blocks/: festwert.rs  festwerteblock.rs  gruppenkennfeld.rs  gruppenkennlinie.rs  mod.rs  stuetzstellenverteilung.rs
templates/: dcm_template.hbs
test-dcms/: 1.hex  NT3_ALPS_Blanc-AWD&RWD_XM_BL0110_RC05_20250220_ZY.DCM  NT3_ALPS_Blanc-AWDAIR_Zone-Lite_XM_BL0100_20250220_LB_1.DCM  NT3_ALPS_Blanc-RWDAIR_Zone-Lite_XM_BL0100_20250220_LB.DCM  NT3_ALPS_Blanc-RWDAIR_Zone-Lite_XM_BL0100_20250220_LB_1.DCM  NT3_ALPS_Blanc-RWDCOIL_Zone-Lite_XM_BL0100_20250220_LB_1.DCM  NT3_ALPS_Blanc-RWDCOIL_Zone-Lite_XM_BL0100_20250220_LB_2.DCM  test1.DCM  test1_1d_dim_changed.DCM  test1_2d_dim_changed.DCM  test1_axis_changed.DCM  test1_modified.DCM  test_map_base.DCM  test_map_modified.DCM  test_sample_672.DCM  test_sample_673.DCM  test_sample_674.DCM  test_sample_675.DCM  test_sample_676.DCM  test_sample_677.DCM  variable_mapping.txt
tests/: test_diff_2d_map_comprehensive.rs  test_diff_enhanced_output.rs  test_diff_json_output.rs  test_diff_map_refactor.rs  test_diff_table_changes.rs
