[package]
name = "dcm_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
indexmap = "2.7.1"
handlebars = "6.3.1"
serde_json = "1.0.139"
chrono = "0.4.40"
serde = {version="1.0.218", features=["derive"]}


[dev-dependencies]
rstest = {version = "0.24.0"}
approx = "0.5.1"
